[package]
name = "nvmet-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nvmet_rs"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
